# $Id$

2008-09-18	Denis M. Gabaidulin

	* main/Base/LightMetaProperty.class.php: isFormless method added.

	* main/Base/AbstractProtoClass.class.php: importPrimitive() always import
	values, if property is formless.

2008-09-16	Konstantin V. Arkhipov

	* main/Base/AbstractProtoClass.class.php: WrongStateException added
	for case with required but inexistant encapsulant.

2008-09-15	Konstantin V. Arkhipov

	* 1.0.7 released.

2008-09-13	Konstantin V. Arkhipov

	* main/DAOs/GenericDAO.class.php: building of circular-dependent
	objects solved.

2008-09-05	Ivan Y. Khvostishkov

	* main/Markup/Csv.class.php: partial Csv implementation (rendering),
	thanks to Michael V. Tchervyakov <htonus@smtp.ru>.

2008-09-04	Konstantin V. Arkhipov

	* main/Base/ImageType.class.php: progressive jpeg type added, patch
	submitted by Konstantin Scheglov <k.s.scheglov@gmail.com>.

2008-09-02	Denis M. Gabaidulin

	* main/Utils/DateUtils: makeFirstDayOfMonth(), makeLastDayOfMonth() added.

2008-09-02	Vladlen Y. Koshelev

	* core/Form/Primitives/PrimitiveEnumeration.class.php,
	test/core/PrimitiveEnumerationTest.class.php: getList() fixed.

2008-09-01	Konstantin V. Arkhipov

	* core/Base/Assert.class.php: isEqual now behaves just like
	!isNotEqual; isSame and isNotSame were also introduced.

2008-08-30	Konstantin V. Arkhipov

	* main/Utils/ClassUtils.class.php, meta/bin/build.php: classes
	preloading moved to ClassUtils::preloadAllClasses() from meta's
	build script.

	* test/: correct test's skipping added.

	* core/Cache/Memcached.class.php: mark peer as dead on link's failure.

2008-08-28	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveEnumeration.class.php: now tries to
	preserve type for integer values.

2008-08-26	Konstantin V. Arkhipov

	* global.inc.php.tpl: don't create useless fake classes in
	__autoload_failed().

2008-08-22	Konstantin V. Arkhipov

	* autoload.wholeClassCache.inc.php: new class cache type introduced